# inseglet

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release-build.yml
bootstrap/: README.md  reaper_mcp_bridge.lua
cmake/: FetchDeps.cmake  FetchReaperSDK.cmake
docs/: CONVENTIONS.md  MANUAL.md  REFERENCE.md
include/: README.md
packaging/reapack/: index.xml  reaper_mcp.ext
scripts/: verify_accessors.py  verify_b2.py  verify_batch2.py  verify_bugc.py  verify_d3.py  verify_damf.py  verify_m1.py  verify_m2.py  verify_m3.py  verify_o1.py  verify_o2.py  verify_o3.py  verify_object_decode_timeline.py  verify_patch_state.py  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase5b.py  verify_phase5cd.py  verify_phase5e.py  verify_phase6bc.py  verify_phase6d.py  verify_phase81.py  verify_phase82.py  verify_phase83.py  verify_phase84.py  verify_s1.py  verify_sdkfixes.py  verify_send_layout.py  verify_set_distance.py
src/: actions_policy.h  adm_bwf.h  adm_profile.h  ambisonic_meter.h  audio_accessor.h  composite_support.h  control_surface.h  damf.h  decode_timeline.h  deliverable_specs.h  discovery.h  elicitation.h  groove.h  head_track_bridge.h  main_thread_queue.h  mcp_server.cpp  mcp_server.h  placement_defaults.h  prompt_registry.h  reaper_api.h  reaper_mcp.cpp  render_stats.h  render_stems.h  resource_registry.h  send_layout.h  spatial_verbs.h  style_palette.h  subscription_hub.h  tool_registry.h  track_chunk.h
src/dsl/: dsl.h
src/jsfx/: mcp_ambi_convert.jsfx  mcp_ambi_mirror.jsfx  mcp_mc_limiter.jsfx
src/prompts/: prompts_expert.cpp
src/resources/: resources_project.cpp
src/tools/: tool_helpers.h  tools_actions.cpp  tools_analysis.cpp  tools_core.cpp  tools_envelopes.cpp  tools_fx.cpp  tools_items.cpp  tools_markers.cpp  tools_meta.cpp  tools_midi.cpp  tools_mix.cpp  tools_routing.cpp  tools_session.cpp  tools_spatial.cpp  tools_timeline.cpp
tests/: CMakeLists.txt  README.md
tests/integration/: run_conformance.py
tests/unit/: test_actions.cpp  test_adm.cpp  test_adm_profile.cpp  test_damf.cpp  test_decode_timeline.cpp  test_deliverable_specs.cpp  test_dsl.cpp  test_elicitation.cpp  test_ergonomics.cpp  test_groove.cpp  test_head_track.cpp  test_main_thread_queue.cpp  test_mcp_server.cpp  test_meter.cpp  test_prompts.cpp  test_send_layout.cpp  test_spatial_verbs.cpp  test_style_palette.cpp  test_subscription_hub.cpp
